tests/fixtures/invalid/pow_float_none_bytes.py
# Cannot call pow() with Float, None, Bytes
x = pow(1.0, None, b"hello")
